--- a/composer.json
+++ b/composer.json
@@ -39,5 +39,5 @@
         "sort-packages": true
     },
     "minimum-stability": "stable",
-    "prefer-stable": true
+    "prefer-stable": false
 }
