--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,6 @@
     "config": {
         "sort-packages": true
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": false
 }
