--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "thedagofugo/blade-dagoicons",
+    "name": "thedagofugo/blade-dago-icons",
     "description": "A package to easily make use of Dagoicons in your Laravel Blade views.",
     "keywords": ["Blade", "Dagoicons", "Laravel"],
-    "homepage": "https://github.com/thedagofugo/blade-dagoicons",
+    "homepage": "https://github.com/thedagofugo/blade-dago-icons",
     "license": "MIT",
     "authors": [
         {
@@ -20,7 +20,7 @@
     },
     "autoload": {
         "psr-4": {
-            "BladeUI\\Dagoicons\\": "src"
+            "TheDagofugo\\Dagoicons\\": "src"
         }
     },
     "autoload-dev": {
@@ -31,7 +31,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "BladeUI\\Dagoicons\\BladeDagoiconsServiceProvider"
+                "TheDagofugo\\Dagoicons\\BladeDagoIconsServiceProvider"
             ]
         }
     },
@@ -39,5 +39,9 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": false
+    "prefer-stable": false,
+    "scripts": {
+        "test": "vendor/bin/phpunit",
+        "format": "vendor/bin/php-cs-fixer fix"
+    }
 }
