--- a/composer.json
+++ b/composer.json
@@ -39,9 +39,5 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": false,
-    "scripts": {
-        "test": "vendor/bin/phpunit",
-        "format": "vendor/bin/php-cs-fixer fix"
-    }
+    "prefer-stable": true
 }
