--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,10 +1,7 @@
 name: Tests
 
 on:
-  push:
   pull_request:
-  schedule:
-    - cron: '0 0 * * *'
 
 jobs:
   tests:
@@ -13,14 +10,34 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [8.2, 8.3]
-        laravel: [11]
+        php: [7.4, '8.0', 8.1, 8.2, 8.3]
+        laravel: [8, 9, 10, 11]
+        exclude:
+          - php: 7.4
+            laravel: 9
+          - php: 7.4
+            laravel: 10
+          - php: 7.4
+            laravel: 11
+          - php: '8.0'
+            laravel: 10
+          - php: '8.0'
+            laravel: 11
+          - php: 8.1
+            laravel: 11
+          - php: 8.2
+            laravel: 8
+          - php: 8.3
+            laravel: 8
+          - php: 8.3
+            laravel: 9
 
     name: PHP ${{ matrix.php }} - Laravel ${{ matrix.laravel }}
 
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
