--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
         }
     ],
     "require": {
-        "php": "~8.2.0|~8.3.0",
-        "blade-ui-kit/blade-icons": "^1.6",
-        "illuminate/support": "^11.0"
+        "php": "^7.4|^8.0",
+        "blade-ui-kit/blade-icons": "^1.1",
+        "illuminate/support": "^8.0|^9.0|^10.0|^11.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^9.0",
-        "phpunit/phpunit": "11.3.x-dev"
+        "orchestra/testbench": "^6.0|^7.0|^8.0|^9.0",
+        "phpunit/phpunit": "^9.0|^10.5|^11.0"
     },
     "autoload": {
         "psr-4": {
