--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,5 +51,11 @@ jobs:
           composer require "illuminate/contracts=^${{ matrix.laravel }}" --prefer-dist --no-interaction --no-update
           composer update --prefer-dist --no-interaction --no-progress
 
+      - name: Install PHP CS Fixer
+        run: composer require --dev friendsofphp/php-cs-fixer
+
       - name: Execute tests
         run: vendor/bin/phpunit
+
+      - name: Run PHP CS Fixer
+        run: vendor/bin/php-cs-fixer fix
