--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,13 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
-        "blade-ui-kit/blade-icons": "^1.1",
-        "illuminate/support": "^8.0|^9.0|^10.0|^11.0"
+        "php": "~8.2.0|~8.3.0",
+        "blade-ui-kit/blade-icons": "^1.6",
+        "illuminate/support": "^11.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.62",
-        "orchestra/testbench": "^6.0|^7.0|^8.0|^9.0",
-        "phpunit/phpunit": "^9.0|^10.5|^11.0"
+        "orchestra/testbench": "^9.0",
+        "phpunit/phpunit": "11.3.x-dev"
     },
     "autoload": {
         "psr-4": {
@@ -40,9 +39,5 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
-    "scripts": {
-        "test": "vendor/bin/phpunit",
-        "format": "vendor/bin/php-cs-fixer fix"
-    }
+    "prefer-stable": true
 }
