--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,8 @@
         "illuminate/support": "^8.0|^9.0|^10.0|^11.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0|^7.0|^8.0|^9.0",
-        "phpunit/phpunit": "^11.3",
-        "squizlabs/php_codesniffer": "^3.0"
+         "orchestra/testbench": "^6.0|^7.0|^8.0|^9.0",
+        "phpunit/phpunit": "^9.0|^10.5|^11.0"
     },
     "autoload": {
         "psr-4": {
