--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
     "prefer-stable": true,
     "scripts": {
         "test": "vendor/bin/phpunit",
-        "format": "vendor/bin/php-cs-fixer fix"
-    }
+        "format": "vendor/bin/php-cs-fixer fix",
+        "cs": "vendor/bin/phpcs"
+    }  
 }
