--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,11 @@
         "blade-ui-kit/blade-icons": "^1.1",
         "illuminate/support": "^8.0|^9.0|^10.0|^11.0"
     },
-    "require-dev": {
+   "require-dev": {
+        "codeat3/blade-icon-generation-helpers": "^0.8",
+        "codeat3/phpcs-styles": "^1.0",
         "orchestra/testbench": "^6.0|^7.0|^8.0|^9.0",
-        "phpunit/phpunit": "^11.3",
-        "squizlabs/php_codesniffer": "^3.0"
+        "phpunit/phpunit": "^9.0|^10.5|^11.0"
     },
     "autoload": {
         "psr-4": {
@@ -43,7 +44,6 @@
     "prefer-stable": true,
     "scripts": {
         "test": "vendor/bin/phpunit",
-        "format": "vendor/bin/php-cs-fixer fix",
-        "cs": "vendor/bin/phpcs src/ tests/"
+        "format": "vendor/bin/php-cs-fixer fix"
     }
 }
