--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
    "require-dev": {
         "codeat3/blade-icon-generation-helpers": "^0.8",
         "codeat3/phpcs-styles": "^1.0",
+        "friendsofphp/php-cs-fixer": "^3.62",
         "orchestra/testbench": "^6.0|^7.0|^8.0|^9.0",
         "phpunit/phpunit": "^9.0|^10.5|^11.0"
     },
