permisos write en workflows

--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -6,6 +6,9 @@ jobs:
   php-cs-fixer:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+
     strategy:
       fail-fast: true
       matrix:
