--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -2,7 +2,10 @@ name: Auto Update Icons
 
 on:
   schedule:
-    - cron: '40 15 * * 5'
+    - cron: '47 15 * * 5'
+  push:
+    branches:
+      - main
 
 jobs:
   generate:
