--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -62,8 +62,18 @@ jobs:
           echo "Current commit: ${{ env.CURRENT_COMMIT }}"
           echo "Latest commit: ${{ env.LATEST_COMMIT }}"
 
-      - name: Install dependencies
+      - name: Install PHP dependencies
         run: composer update --no-interaction --no-progress --dev
+
+      - name: Verify node_modules/dago-icons exists
+        run: |
+          if [ ! -d "node_modules/dago-icons" ]; then
+            echo "dago-icons module is missing!"
+            exit 1
+          fi
+
+      - name: List files and directories
+        run: ls -R
 
       - name: Compile icons to resources directory
         if: env.CURRENT_COMMIT != env.LATEST_COMMIT
@@ -85,4 +95,3 @@ jobs:
             This updates from [${{ env.CURRENT_COMMIT }}](https://github.com/${{ env.REPOSITORY }}/commit/${{ env.CURRENT_COMMIT }}) to [${{ env.LATEST_COMMIT }}](https://github.com/${{ env.REPOSITORY }}/commit/${{ env.LATEST_COMMIT }}).
             Check out the differences: [`${{ env.CURRENT_COMMIT }}` ... `${{ env.LATEST_COMMIT }}`](https://github.com/${{ env.REPOSITORY }}/compare/${{ env.CURRENT_COMMIT }}...${{ env.LATEST_COMMIT }})
           branch: feature/update-${{ env.LATEST_COMMIT }}
-
