--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Install PHP dependencies
         run: composer update --no-interaction --no-progress --dev
 
-      - name: Verify node_modules/dago-icons exists
+      - name: Verify vendor/dago-icons exists
         run: |
           if [ ! -d "vendor/dago-icons" ]; then
             echo "dago-icons module is missing!"
