--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -37,15 +37,33 @@ jobs:
           ref: ${{ env.BRANCH }}
           path: ./dist
 
-      - name: Install PHP dependencies
-        run: composer install --no-interaction --no-progress --dev
+      - name: Install Node.js dependencies
+        run: npm install
 
-      - name: Verify vendor/dago-icons exists
+      - id: latest-commit
+        name: Get the latest commit
         run: |
-          if [ ! -d "vendor/dago-icons" ]; then
-            echo "dago-icons module is missing!"
-            exit 1
-          fi
+          echo 'LATEST_COMMIT<<EOF' >> $GITHUB_ENV
+          cd ./dist && git log  --format="%H" -n 1 >> $GITHUB_ENV
+          echo 'EOF' >> $GITHUB_ENV
+
+      - id: current-commit
+        name: Get current commot
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: ./.commit
+
+      - name: Add versions to environment
+        run: |
+          echo "CURRENT_COMMIT=${{ steps.current-commit.outputs.content }}" >> $GITHUB_ENV
+
+      - name: Output versions
+        run: |
+          echo "Current commit: ${{ env.CURRENT_COMMIT }}"
+          echo "Latest commit: ${{ env.LATEST_COMMIT }}"
+
+      - name: Install dependencies
+        run: composer update --no-interaction --no-progress --dev
 
       - name: Compile icons to resources directory
         if: env.CURRENT_COMMIT != env.LATEST_COMMIT
@@ -67,3 +85,4 @@ jobs:
             This updates from [${{ env.CURRENT_COMMIT }}](https://github.com/${{ env.REPOSITORY }}/commit/${{ env.CURRENT_COMMIT }}) to [${{ env.LATEST_COMMIT }}](https://github.com/${{ env.REPOSITORY }}/commit/${{ env.LATEST_COMMIT }}).
             Check out the differences: [`${{ env.CURRENT_COMMIT }}` ... `${{ env.LATEST_COMMIT }}`](https://github.com/${{ env.REPOSITORY }}/compare/${{ env.CURRENT_COMMIT }}...${{ env.LATEST_COMMIT }})
           branch: feature/update-${{ env.LATEST_COMMIT }}
+
