--- a/.github/workflows/coding-standards.yml
+++ b/.github/workflows/coding-standards.yml
@@ -3,5 +3,8 @@ name: Coding Standards
 on: [push]
 
 jobs:
+  permissions:
+      contents: write
+      
   lint:
     uses: laravel/.github/.github/workflows/coding-standards.yml@main
