--- a/.github/workflows/coding-standards.yml
+++ b/.github/workflows/coding-standards.yml
@@ -5,14 +5,18 @@ on: [push]
 jobs:
   lint:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+
     steps:
+      - name: Run Laravel Coding Standards
+        uses: laravel/.github/.github/workflows/coding-standards.yml@main
+        
       - name: Checkout code
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Run Laravel Coding Standards
-        uses: laravel/.github/.github/workflows/coding-standards.yml@main
 
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
