--- a/.github/workflows/coding-standards.yml
+++ b/.github/workflows/coding-standards.yml
@@ -10,13 +10,15 @@ jobs:
       contents: write
 
     steps:
-      - name: Run Laravel Coding Standards
-        uses: laravel/.github/.github/workflows/coding-standards.yml@main
-        
       - name: Checkout code
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Run Laravel Coding Standards
+        uses: laravel/.github/.github/workflows/coding-standards.yml@main
+        with:
+          # Opcional: puedes pasar parámetros si el workflow reutilizable los acepta
 
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
