--- a/.github/workflows/coding-standards.yml
+++ b/.github/workflows/coding-standards.yml
@@ -1,12 +1,13 @@
-name: Run Coding Standards
+name: "Fix Code Styling"
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+
+permissions:
+  contents: write
 
 jobs:
   lint:
     uses: laravel/.github/.github/workflows/coding-standards.yml@main
-    with:
-      example_input: 'value'  # Proporciona los inputs necesarios si el workflow reutilizable los requiere
-
-    permissions:
-      contents: write
